# pyrolite

./: .codacy.yml  .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  citation.cff  environment.yml  files.txt  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: docstest.yml  unittest.yml
binder/: environment.yml  postBuild
data/refcomp/: DMM_WorkmanHart2005.csv  DM_SaltersStrake2004.csv
doc/: melts_integration.md  melts_web_services.md
doc/examples/: CompositionsTesting.ipynb  Features.ipynb
docs/: Makefile  WIP_InteractivePlottingBackend.ipynb  WIP_UnitsSupport.ipynb  docs_require.txt  make.bat  melts_integration.md
docs/binder/: environment.yml  postBuild
docs/examples/: Features.ipynb  dask_scratch.py  melts_install.ipynb  scratch.py
docs/source/: .gitignore  changelog.rst  cite.rst  conduct.rst  conf.py  contributing.rst  contributors.rst  debugging.rst  development.rst  docpatch.py  docutils.conf  future.rst  gettingstarted.rst  index.rst  installation.rst  modules.rst  pyrolite.rst  pyrolite.util.rst  submodules.rst  tests.rst
draft/: _test_geochem.py  melts.py  mineral.py  test_util_melts.py  units.py
draft/EMCOMP/: EMCOMP.py
draft/earthchem/: earthchem.py  metadata.py  ocean_features.txt  ofn.html  ridges.html  ridges.txt
paper/: paper.bib  paper.md  pyOpenSciSubmission.md
pyrolite/: __init__.py  _version.py  alteration.py  classification.py  compositions.py  geochem.py  melts.py  norm.py  normalisation.py  pdutil.py  plot.py  text_utilities.py
pyrolite/comp/: __init__.py  aggregate.py  codata.py  impute.py  renorm.py
pyrolite/compositions/: impute.py
pyrolite/ext/: __init__.py
pyrolite/extensions/: __init__.py
pyrolite/geochem/: __init__.py  alteration.py  ind.py  ions.py  magma.py  norm.py  parse.py  transform.py  validate.py
pyrolite/mineral/: __init__.py  db.py  ions.py  lattice.py  mindb.py  mineral.py  normative.py  sites.py  template.py  transform.py
pyrolite/plot/: __init__.py  _c.py  biplot.py  color.py  density.py  parallel.py  spider.py  stem.py  tern.py  ternary.py
pyrolite/util/: __init__.py  classification.py  database.py  distributions.py  env.py  general.py  georoc.py  impute.py  lambdas.py  log.py  math.py  melts.py  meta.py  missing.py  multip.py  multiprocessing.py  pandas.py  pd.py  plot.py  resampling.py  skl.py  spatial.py  synthetic.py  text.py  time.py  types.py  units.py  web.py  wfs.py
test/: extensions.py  test_alteration.py  test_classification.py  test_composiitons.py  test_compositions.py  test_geochem.py  test_melts.py  test_norm.py  test_normalisation.py  test_plot.py  test_text_utilities.py  test_textutil.py
test/comp/: comp_aggregate.py  comp_codata.py  comp_impute.py  comp_pyrocomp.py  test_comp_aggregate.py  test_comp_codata.py  test_comp_impute.py  test_comp_renorm.py
test/compositions/: test_compositions_aggregate.py  test_compositions_codata.py  test_compositions_impute.py
test/geochem/: geochem_alteration.py  geochem_ind.py  geochem_isotope.py  geochem_magma.py  geochem_norm.py  geochem_parse.py  geochem_pyrochem.py  geochem_quality.py  geochem_transform.py  test_geochem.py  test_geochem_alteration.py  test_geochem_ind.py  test_geochem_magma.py  test_geochem_norm.py  test_geochem_parse.py  test_geochem_transform.py  test_geochem_validate.py
test/mineral/: mineral_lattice.py  mineral_mindb.py  mineral_mineral.py  mineral_normative.py  mineral_sites.py  mineral_template.py  mineral_transform.py  test_mineral_db.py  test_mineral_ions.py  test_mineral_mineral.py  test_mineral_sites.py
test/plot/: plot_biplot.py  plot_c.py  plot_color.py  plot_density.py  plot_parallel.py  plot_plot.py  plot_pyroplot.py  plot_spider.py  plot_stem.py  plot_tern.py  test_plot.py  test_plot_density.py  test_plot_spider.py  test_plot_tern.py  test_plot_ternary.py
test/util/: test_util_classification.py  test_util_env.py  test_util_general.py  test_util_georoc.py  test_util_impute.py  test_util_math.py  test_util_melts.py  test_util_multip.py  test_util_multiprocessing.py  test_util_pandas.py  test_util_pd.py  test_util_plot.py  test_util_skl.py  test_util_spatial.py  test_util_synthetic.py  test_util_text.py  test_util_time.py  util_classification.py  util_distributions.py  util_env.py  util_general.py  (+18 more)
(+842 files in other folders)
