[aliases]
test=pytest

[tool:pytest]
addopts =  --cov=pyrolite --cov-report html --cov-config .coveragerc --cov-report term-missing --ignore=draft

[versioneer]
VCS = git
style = pep440
versionfile_source = pyrolite/_version.py
versionfile_build = pyrolite/_version.py
tag_prefix =
parentdir_prefix = pyrolite-

[metadata]
description_file = README.md
license_file = LICENSE
