[aliases]
test=pytest

[tool:pytest]
addopts = test --cov=pyrolite --cov-report html --cov-report term-missing --cov-config .coveragerc
python_files = *.py

[versioneer]
VCS = git
style = pep440
versionfile_source = pyrolite/_version.py
versionfile_build = pyrolite/_version.py
tag_prefix =
parentdir_prefix = pyrolite-

[metadata]
description_file = README.md
license_file = LICENSE
